# PGM-RenderEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: Entity.h  IO.h  Line.h  Log.h  LoopTemplates.h  Mat4.h  Material.h  Model.h  Point3D.h  Quaternion.h  Renderer.h  Shader.h  Transform.h  Triangle.h  Vector3D.h
src/: IO.cpp  Log.cpp  Mat4.cpp  Material.cpp  Quaternion.cpp  Renderer.cpp  Shader.cpp  Transform.cpp  Vector3D.cpp  main.cpp
